# tamir4work

./: .gitignore  README.md  TochniotLeMosad_win.spec  email_instructions.txt  excel_extractor.spec  pyproject.toml
.github/workflows/: build-windows.yml
scripts/: build_tochniot_exe.py
src/excel_extractor/: __init__.py  extractor.py  main.py  tochniot_le_mosad.py
task march 2/: README_TochniotLeMosad.md  תוכניות למוסדות דרוזים.xlsx
task march 2/attachments/: שיוך מוסדות לתוכניות של מלווים.xlsx  שיוך מלווים למוסדות.xlsx
