[project]
name = "excel-extractor"
version = "0.1.0"
description = "Extract data from Excel files and create consolidated output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyinstaller>=6.19.0",
]

[project.scripts]
excel-extractor = "excel_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_extractor"]
